--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 **/.terraform/*
+*.tfstate.*
+*.tfstate
+*.lock.*
 
 # Node rules:
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
