--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 **.lock.*
 
+provider.*
+
 
 # Node rules:
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
